fix: Fixed the dark mode text bug

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+    themes:
+        light --default,
+        dark --prefersdark;
+}
 @plugin "tailwind-scrollbar-hide";
 
 @theme {
